feat(xdebug): add option to enable/disable xdebug
Update command runners to handle multi-word inputs.
Add a new action for toggling xdebug.